--- a/index.html
+++ b/index.html
@@ -117,6 +117,23 @@ li{margin:.5rem 0}
       <button id="howBtn" class="btn info" type="button">📖 How to Download</button>
     </div>
 
+
+<!-- Top Ad -->
+<div style="text-align:center; margin:12px 0;">
+ <script type="text/javascript">
+	atOptions = {
+		'key' : 'a89eb63da56404c63da8c540b2fd9c33',
+		'format' : 'iframe',
+		'height' : 50,
+		'width' : 320,
+		'params' : {}
+	};
+</script>
+<script type="text/javascript" src="//www.highperformanceformat.com/a89eb63da56404c63da8c540b2fd9c33/invoke.js"></script>
+</div>
+
+
+
     <div class="hr"></div>
     <h3 style="margin:0 0 6px 0">Download Instructions</h3>
     <ol class="muted">
